# webcrawler

./: .gitignore  .pre-commit-config.yaml  README.md  crawl.py  logger.py  pyproject.toml
pages/: pages_metadata.json
tests/: test_crawler.py
